// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Hoverable Tooltip Handles multiple tooltips properly 1`] = `
<body>
  <div>
    <div>
      Hover on
       
      <strong
        data-testid="hoverable-1"
        data-tooltip="Tooltip 1"
      >
        me
      </strong>
      , or
       
      <strong
        data-testid="hoverable-2"
        data-tooltip="Tooltip 2"
      >
        me
      </strong>
    </div>
  </div>
  <div>
    <div
      class="fade show"
    >
      <div
        class="tooltip show tooltip show tooltipAuto bs-tooltip-auto"
        data-popper-placement="top"
        data-popper-reference-hidden="true"
        style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, 0px);"
      >
        <div
          class="tooltip-inner tooltipInner"
          role="tooltip"
        >
          Tooltip 2
        </div>
        <span
          class="arrow tooltip-arrow"
          style="position: absolute; left: 0px; transform: translate(0px, 0px);"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Tooltip Hoverable Tooltip Shows tooltip properly on hover 1`] = `
<body>
  <div>
    <div>
      Hover on
       
      <strong
        data-testid="hoverable-1"
        data-tooltip="Tooltip 1"
      >
        me
      </strong>
      , or
       
      <strong
        data-testid="hoverable-2"
        data-tooltip="Tooltip 2"
      >
        me
      </strong>
    </div>
  </div>
  <div>
    <div
      class="fade show"
    >
      <div
        class="tooltip show tooltip show tooltipAuto bs-tooltip-auto"
        data-popper-placement="top"
        data-popper-reference-hidden="true"
        style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, 0px);"
      >
        <div
          class="tooltip-inner tooltipInner"
          role="tooltip"
        >
          Tooltip 1
        </div>
        <span
          class="arrow tooltip-arrow"
          style="position: absolute; left: 0px; transform: translate(0px, 0px);"
        />
      </div>
    </div>
  </div>
</body>
`;
